--- a/astronomy/solar-system/index.html
+++ b/astronomy/solar-system/index.html
@@ -9,3 +9,13 @@ layout: astronomy
     <h2>The Sun</h2>
     <p>The Sun is the center of the Solar System and holds the entire thing together with its gravity. You can learn more about the sun <a href="/astronomy/solar-system/sun/">here</a>.</p>
 </section>
+
+<section>
+    <h2>The Planets</h2>
+    <p>To find all the planets, we need to first define a planet. In 2006, the International Astronomical Union (IAU) defined a planet (in the Solar System) to be anything that fits these requirements: </p>
+    <ol>
+        <li>The object <em>orbits</em> the Sun</li>
+        <li>The object needs to be similar to a sphere</li>
+        <li>The object must have enough gravity to clear the space surrounding it</li>
+    </ol>
+</section>
