add planets list

--- a/astronomy/solar-system/index.html
+++ b/astronomy/solar-system/index.html
@@ -18,4 +18,15 @@ layout: astronomy
         <li>The object needs to be similar to a sphere</li>
         <li>The object must have enough gravity to clear the space surrounding it</li>
     </ol>
+    <p>Astronomers have discovered eight objects that fit the definition (the planet names are links): </p>
+    <ol>
+        <li><a href="/astronomy/solar-system/mercury/">Mercury</a></li>
+        <li><a href="/astronomy/solar-system/venus/">Venus</a></li>
+        <li><a href="/astronomy/solar-system/earth/">Earth</a></li>
+        <li><a href="/astronomy/solar-system/mars/">Mars</a></li>
+        <li><a href="/astronomy/solar-system/jupiter/">Jupiter</a></li>
+        <li><a href="/astronomy/solar-system/saturn/">Saturn</a></li>
+        <li><a href="/astronomy/solar-system/uranus/">Uranus</a></li>
+        <li><a href="/astronomy/solar-system/neptune/">Neptune</a></li>
+    </ol>
 </section>
