dwarf planets new section

--- a/astronomy/solar-system/index.html
+++ b/astronomy/solar-system/index.html
@@ -30,3 +30,15 @@ layout: astronomy
         <li><a href="/astronomy/solar-system/neptune/">Neptune</a></li>
     </ol>
 </section>
+
+<section>
+    <h2>Dwarf Planets</h2>
+    <p><em>Dwarf planets</em> are objects that orbit the Sun and are nearly round, but don't clear the surrounding space. Below is a list of dwarf planets (the names are also links: </p>
+    <ol>
+        <li><a href="/astronomy/solar-system/pluto/">Pluto</a></li>
+        <li><a href="/astronomy/solar-system/ceres/">Ceres</a></li>
+        <li><a href="/astronomy/solar-system/eris/">Eris</a></li>
+        <li><a href="/astronomy/solar-system/haumea/">Haumea</a></li>
+        <li><a href="/astronomy/solar-system/makemake/">Makemake</a></li>
+    </ol>
+</section>
