--- a/astronomy/solar-system/index.html
+++ b/astronomy/solar-system/index.html
@@ -29,6 +29,7 @@ layout: astronomy
         <li><a href="/astronomy/solar-system/uranus/">Uranus</a></li>
         <li><a href="/astronomy/solar-system/neptune/">Neptune</a></li>
     </ol>
+    <p>The planets can be categorized into two categories: the terrestrial planets and the gas giants. The terrestrial planets are Mercury, Venus, Earth and Mars. The terrestrial planets are made up of heavy elements. The gas giants are much larger than the terrestrial planets and are made up of gases. The gas giants are Jupiter, Saturn, Uranus, and Neptune.</p>
 </section>
 
 <section>
