--- a/astronomy/solar-system/index.html
+++ b/astronomy/solar-system/index.html
@@ -18,6 +18,7 @@ layout: astronomy
         <li>The object needs to be similar to a sphere</li>
         <li>The object must have enough gravity to clear the space surrounding it</li>
     </ol>
+    <p>The word <em>orbit</em> means that planets go around the sun. It's kind of like falling towards the sun, but missing every time you get close.</p>
     <p>Astronomers have discovered eight objects that fit the definition (the planet names are links): </p>
     <ol>
         <li><a href="/astronomy/solar-system/mercury/">Mercury</a></li>
