--- a/astronomy/stars.html
+++ b/astronomy/stars.html
@@ -20,7 +20,7 @@ layout: astronomy
 
 <section>
     <h2>Composition of Stars</h2>
-    <p>Stars are about 90% hydrogen and 10% helium. The element helium was actually first discovered in the sun. Tiny traces of heavier elements can also be found.</p>
+    <p>Stars are about 90% hydrogen and 10% helium. The element helium was actually first discovered in the sun (a star). Tiny traces of heavier elements can also be found.</p>
 </section>
 
 <section>
