new mercury page

--- a/astronomy/solar-system/sun.html
+++ b/astronomy/solar-system/sun.html
@@ -11,11 +11,16 @@ layout: astronomy
 </section>
 
 <section>
+    <h2>Physical Characteristics</h2>
+    <p></p>
+</section>
+
+<section>
     <h2>Just How Big is the Sun?</h2>
     <p></p>
 </section>
 
 <section>
-    <h2>Structure</h2>
+    <h2>Internal Structure</h2>
     <p></p>
 </section>
