--- a/astronomy/solar-system/venus.html
+++ b/astronomy/solar-system/venus.html
@@ -1,9 +1,9 @@
 ---
-title: Mercury
-permalink: /astronomy/solar-system/mercury/
+title: Venus
+permalink: /astronomy/solar-system/venus/
 layout: astronomy
 ---
-<h1>Mercury</h1>
+<h1>Venus</h1>
 
 <section>
     <h2>Physical Characteristics</h2>
