--- a/astronomy/solar-system/venus.html
+++ b/astronomy/solar-system/venus.html
@@ -6,12 +6,22 @@ layout: astronomy
 <h1>Venus</h1>
 
 <section>
-    <h2>Physical Characteristics</h2>
+    <h2>Size and Distance</h2>
     <p></p>
 </section>
 
 <section>
-    <h2>Internal Structure</h2>
+    <h2>Structure</h2>
+    <p></p>
+</section>
+
+<section>
+    <h2>Surface</h2>
+    <p></p>
+</section>
+
+<section>
+    <h2>Atmosphere</h2>
     <p></p>
 </section>
 
