--- a/astronomy/solar-system/mercury.html
+++ b/astronomy/solar-system/mercury.html
@@ -11,6 +11,11 @@ layout: astronomy
 </section>
 
 <section>
+    <h2>Orbit and Rotation</h2>
+    <p></p>
+</section>
+
+<section>
     <h2>Structure</h2>
     <p></p>
 </section>
@@ -26,6 +31,6 @@ layout: astronomy
 </section>
 
 <section>
-    <h2>Orbit and Rotation</h2>
+    <h2>Formation</h2>
     <p></p>
 </section>
