--- a/astronomy/solar-system/sun.html
+++ b/astronomy/solar-system/sun.html
@@ -3,24 +3,39 @@ title: The Sun
 permalink: /astronomy/solar-system/sun/
 layout: astronomy
 ---
-<h1>The Sun</h1>
+<h1>Sun</h1>
 
 <section>
-    <h2>What is the Sun?</h2>
+    <h2>Overview</h2>
     <p></p>
 </section>
 
 <section>
-    <h2>Physical Characteristics</h2>
+    <h2>Size and Distance</h2>
     <p></p>
 </section>
 
 <section>
-    <h2>Just How Big is the Sun?</h2>
+    <h2>Orbit and Rotation</h2>
     <p></p>
 </section>
 
 <section>
-    <h2>Internal Structure</h2>
+    <h2>Structure</h2>
+    <p></p>
+</section>
+
+<section>
+    <h2>Surface</h2>
+    <p></p>
+</section>
+
+<section>
+    <h2>Atmosphere</h2>
+    <p></p>
+</section>
+
+<section>
+    <h2>Formation</h2>
     <p></p>
 </section>
