--- a/astronomy/solar-system/mars.html
+++ b/astronomy/solar-system/mars.html
@@ -6,6 +6,11 @@ layout: astronomy
 <h1>Mars</h1>
 
 <section>
+    <h2>Overview</h2>
+    <p></p>
+</section>
+
+<section>
     <h2>Size and Distance</h2>
     <p></p>
 </section>
