--- a/astronomy/solar-system/sun.html
+++ b/astronomy/solar-system/sun.html
@@ -8,6 +8,7 @@ layout: astronomy
 <section>
     <h2>Overview</h2>
     <p></p>
+    <img src="/images/astronomy/sun.png" alt="A false-color image of the sun">
 </section>
 
 <section>
