--- a/astronomy/solar-system/venus.html
+++ b/astronomy/solar-system/venus.html
@@ -8,6 +8,7 @@ layout: astronomy
 <section>
     <h2>Overview</h2>
     <p></p>
+    <img src="/images/astronomy/venus.png">
 </section>
 
 <section>
