--- a/programming/python/data-structures-and-algorithms/big-o-notation.html
+++ b/programming/python/data-structures-and-algorithms/big-o-notation.html
@@ -5,3 +5,9 @@ permalink: /programming/python/data-structures-and-algorithms/big-o-notation/
 ---
 
 <h1>Big O Notation</h1>
+<p>In this tutorial, we'll learn about Big O Notation, one the fundamental concepts with Data Structures And Algorithms.</p>
+
+<section>
+    <h2>What is Big O Noation?</h2>
+    <p></p>
+</section>
