--- a/programming/python/data-structures-and-algorithms/big-o-notation.html
+++ b/programming/python/data-structures-and-algorithms/big-o-notation.html
@@ -8,6 +8,6 @@ permalink: /programming/python/data-structures-and-algorithms/big-o-notation/
 <p>In this tutorial, we'll learn about Big O Notation, one the fundamental concepts with Data Structures And Algorithms.</p>
 
 <section>
-    <h2>What is Big O Noation?</h2>
+    <h2>What is Big O Notation?</h2>
     <p></p>
 </section>
