--- a/programming/python/data-structures-and-algorithms/big-o-notation.html
+++ b/programming/python/data-structures-and-algorithms/big-o-notation.html
@@ -11,3 +11,13 @@ permalink: /programming/python/data-structures-and-algorithms/big-o-notation/
     <h2>What is Big O Notation?</h2>
     <p></p>
 </section>
+
+<section>
+    <h2>Time COmplexity</h2>
+    <p></p>
+</section>
+
+<section>
+    <h2>Space Complexity</h2>
+    <p></p>
+</section>
