--- a/programming/python/data-structures-and-algorithms/big-o-notation.html
+++ b/programming/python/data-structures-and-algorithms/big-o-notation.html
@@ -13,7 +13,7 @@ permalink: /programming/python/data-structures-and-algorithms/big-o-notation/
 </section>
 
 <section>
-    <h2>Time COmplexity</h2>
+    <h2>Time Complexity</h2>
     <p></p>
 </section>
 
