--- a/programming/python/data-structures-and-algorithms/searching.html
+++ b/programming/python/data-structures-and-algorithms/searching.html
@@ -19,5 +19,12 @@ permalink: /programming/python/data-structures-and-algorithms/searching/
 
 <section>
     <h2>Different Search Algorithms</h2>
-    <p></p>
+    <p>Here are the Search Algorithms we'll go over in this tutorial series. However, do note that there <b>TONS!</b> of other Search Algorithms, but these are the most popular ones:</p>
+    <ul>
+        <li>Linear Search</li>
+        <li>Binary Search</li>
+        <li>Jump Search</li>
+        <li>Breadth First Search</li>
+        <li>Depth First Search</li>
+    </ul>
 </section>
