--- a/programming/css/how-css-works.html
+++ b/programming/css/how-css-works.html
@@ -7,9 +7,11 @@ layout: css
 <section>
   <h1>How CSS Works</h1>
   <p>In the last lesson, we got CSS linked into our site and we changed the font. In this lesson, we'll go over how CSS works and some other ways to use CSS. Below was our code: </p>
-  <code style='color:#000000;'><span style='color:#800000; font-weight:bold; '>body</span> <span style='color:#800080; '>{</span><br>
-          &nbsp;&nbsp;&nbsp;&nbsp;<span style='color:#bb7977; font-weight:bold; '>font-family</span><span style='color:#808030; '>:</span> <span style='color:#074726; '>sans-serif</span><span style='color:#800080; '>;</span><br>
-        <span style='color:#800080; '>}</span></code>
+  <pre><code class="language-css">
+body {
+    font-family: sans-serif;
+}
+  </code></pre>
   <p>Now, we will go over how the CSS code works.</p>
 </section>
 
