--- a/programming/css/setup-css.html
+++ b/programming/css/setup-css.html
@@ -9,7 +9,7 @@ layout: css
 <section>
     <h2>How do I setup CSS?</h2>
     <p>It is actually very easy to get CSS setup. To do that, first, make a file in the same directory as your <code>index.html</code> file called <code>style.css</code>. This is where all of our CSS will go. Then, in your index.html file, add the following code into your HTML file's <code>&lt;head></code> tag: </p>
-    <pre><code class="language-css">&lt;link href="style.css" rel="stylesheet" type="text/css" /></code></pre>
+    <pre><code class="language-html">&lt;link href="style.css" rel="stylesheet" type="text/css" /></code></pre>
     <p>We will discuss what this code means later.</p>
 </section>
 
