--- a/programming/python/data-structures-and-algorithms/depth-first-search.html
+++ b/programming/python/data-structures-and-algorithms/depth-first-search.html
@@ -1,23 +1,8 @@
 ---
 layout: python-data-alg
-title: Big O Notation
-permalink: /programming/python/data-structures-and-algorithms/big-o-notation/
+title: Depth First Search
+permalink: /programming/python/data-structures-and-algorithms/depth-first-search/
 ---
 
-<h1>Big O Notation</h1>
-<p>In this tutorial, we'll learn about Big O Notation, one the fundamental concepts with Data Structures And Algorithms.</p>
-
-<section>
-    <h2>What is Big O Notation?</h2>
-    <p></p>
-</section>
-
-<section>
-    <h2>Time Complexity</h2>
-    <p></p>
-</section>
-
-<section>
-    <h2>Space Complexity</h2>
-    <p></p>
-</section>
+<h1>Depth First Search</h1>
+<p></p>
