--- a/programming/css/how-css-works.html
+++ b/programming/css/how-css-works.html
@@ -17,8 +17,8 @@ body {
 
 <section>
   <h1>Breaking It Down</h1>
-  <p>On the first line, we have <code style='color:#000000;'><span style='color:#800000; font-weight:bold; '>body</span> <span style='color:#800080; '>{</span></code>. This means that we want to apply our CSS to the <code>body</code> tag, which refers to the entire page. If we were to change it to <code>a</code> or something else like <code>i</code>, then our CSS, at least in our example, would affect that. By using <code>body</code>, it affects <u>EVERYTHING</u> in the <code>body</code>, including all of the <i>other tags</i>!</p>
-  <p>This is useful if you want to change the background color of the <b>WHOLE PAGE</b> or the font of the whole page.</p>
+  <p>On the first line, we have <code style='color:#000000;'><span style='color:#800000; font-weight:bold; '>body</span> <span style='color:#800080; '>{</span></code>. This means that we want to apply our CSS to the <code>body</code> tag, which refers to the entire page. If we were to change it to <code>a</code> or something else like <code>i</code>, then our CSS, at least in our example, would affect that. By using <code>body</code>, it affects <u>EVERYTHING</u> in the <code>body</code>, including all of the <strong>other tags</strong>! In other words, the CSS properties <strong>cascade</strong>. This is why CSS is called Cascading Style Sheets.</p>
+  <p>This is useful if you want to change the background color of the <strong>WHOLE PAGE</strong> or the font of the whole page.</p>
   <br>
   <p>On the next line, we have <code><span style='color:#bb7977; font-weight:bold; '>font-family</span><span style='color:#808030; '>:</span> <span style='color:#074726; '>sans-serif</span><span style='color:#800080; '>;</span></code>. This means to make the <code>font-family</code>, or the font, a sans-serif font. We could've changed it to another font like <code>Segoe UI</code> to make it a different font.</p>
   <br>
