edit tutorial index

--- a/tutorial-index.html
+++ b/tutorial-index.html
@@ -5,7 +5,7 @@ layout: default
 ---
 
 <h1>Tutorial Index</h1>
-<p><i class="fas fa-exclamation-circle"></i> Warning: Most of Learnmonkey's content is currently a work in progress!</p>
+<p><i class="fas fa-exclamation-circle"></i> Warning: Most of Learnmonkey's content is currently a work in progress! You can identify tutorials that are a work-in-progress with an alert at the top of the tutorial.</p>
 <ul id="tutorial-index-main">
     <li><a href="/programming/">Programming</a>
         <ul>
