move astronomy into physics

--- a/physics/astronomy/solar-system/mars.html
+++ b/physics/astronomy/solar-system/mars.html
@@ -1,6 +1,6 @@
 ---
 title: Mars
-permalink: /astronomy/solar-system/mars/
+permalink: /physics/astronomy/solar-system/mars/
 layout: astronomy
 ---
 <h1>Mars</h1>
@@ -8,7 +8,7 @@ layout: astronomy
 <section>
     <h2>Overview</h2>
     <p></p>
-    <img src="/images/astronomy/mars.png">
+    <img src="/images/physics/astronomy/mars.png">
 </section>
 
 <section>
