--- a/physics/astronomy/solar-system/mercury.html
+++ b/physics/astronomy/solar-system/mercury.html
@@ -1,14 +1,14 @@
 ---
-title: Venus
-permalink: /astronomy/solar-system/venus/
+title: Mercury
+permalink: /physics/astronomy/solar-system/mercury/
 layout: astronomy
 ---
-<h1>Venus</h1>
+<h1>Mercury</h1>
 
 <section>
     <h2>Overview</h2>
     <p></p>
-    <img src="/images/astronomy/venus.png">
+    <img src="/images/physics/astronomy/mercury.png">
 </section>
 
 <section>
