--- a/physics/astronomy/solar-system/earth.html
+++ b/physics/astronomy/solar-system/earth.html
@@ -1,6 +1,6 @@
 ---
 title: Earth
-permalink: /astronomy/solar-system/earth/
+permalink: /physics/astronomy/solar-system/earth/
 layout: astronomy
 ---
 <h1>Earth</h1>
@@ -8,7 +8,7 @@ layout: astronomy
 <section>
     <h2>Overview</h2>
     <p></p>
-    <img src="/images/astronomy/earth.png">
+    <img src="/images/physics/astronomy/earth.png">
 </section>
 
 <section>
