--- a/physics/astronomy/solar-system/sun.html
+++ b/physics/astronomy/solar-system/sun.html
@@ -1,6 +1,6 @@
 ---
 title: The Sun
-permalink: /astronomy/solar-system/sun/
+permalink: /physics/astronomy/solar-system/sun/
 layout: astronomy
 ---
 <h1>Sun</h1>
@@ -8,7 +8,7 @@ layout: astronomy
 <section>
     <h2>Overview</h2>
     <p></p>
-    <img src="/images/astronomy/sun.png" alt="A false-color image of the sun">
+    <img src="/images/physics/astronomy/sun.png" alt="A false-color image of the sun">
 </section>
 
 <section>
