update tutorial index

--- a/tutorial-index.html
+++ b/tutorial-index.html
@@ -52,6 +52,10 @@ layout: default
             <li><a href="/math/calculus/">Calculus</a></li>-->
         </ul>
     </li>
-    <li><a href="/astronomy/">Astronomy</a></li>
+    <li><a href="/physics/">Physics</a>
+        <ul>
+            <li><a href="/physics/astronomy/">Astronomy</a></li>
+        </ul>
+    </li>
 </ul>
 
