--- a/programming/python/data-structures-and-algorithms/linear-search.html
+++ b/programming/python/data-structures-and-algorithms/linear-search.html
@@ -5,4 +5,4 @@ permalink: /programming/python/data-structures-and-algorithms/linear-search/
 ---
 
 <h1>Linear Search</h1>
-<p>In this tutorial, we'll learn about Linear Search, the simplest Search Algorithm there is out therer.</p>
+<p>In this tutorial, we'll learn about Linear Search, the simplest Search Algorithm there is out there.</p>
