--- a/programming/python/data-structures-and-algorithms/linear-search.html
+++ b/programming/python/data-structures-and-algorithms/linear-search.html
@@ -6,3 +6,13 @@ permalink: /programming/python/data-structures-and-algorithms/linear-search/
 
 <h1>Linear Search</h1>
 <p>In this tutorial, we'll learn about Linear Search, the simplest Search Algorithm there is out there.</p>
+
+<section>
+    <h2>What is a Linear Search?</h2>
+    <p></p>
+</section>
+
+<section>
+    <h2>Linear Search Implementation</h2>
+    <p></p>
+</section>
