fill out section

--- a/programming/python/data-structures-and-algorithms/linear-search.html
+++ b/programming/python/data-structures-and-algorithms/linear-search.html
@@ -9,7 +9,7 @@ permalink: /programming/python/data-structures-and-algorithms/linear-search/
 
 <section>
     <h2>What is a Linear Search?</h2>
-    <p></p>
+    <p>A Linear Search is the simplest and easiest Search Algorithm out there. It loops over an <i>array</i> (a <i>list</i>), and checks every item for the target element. Of course, it isn't very efficient if your element is at the end of the list and you have a lot of elements in your list. So, a Linear Search isn't often used in programming, but it is a fundamental idea.</p>
 </section>
 
 <section>
