add physics image

--- a/physics/index.html
+++ b/physics/index.html
@@ -9,5 +9,6 @@ layout: default
     <ul>
         <li><a href="/physics/astronomy/">Astronomy</a></li>
     </ul>
-    <p>Find more physics tutorials in our <a href="/tutorial-index/">Tutorial Index</a>.</p>
+    <img src="/images/physics/physics.jpg">
+    <p>Find more physics tutorials in the <a href="/tutorial-index/">tutorial index</a>.</p>
 </section>
