--- a/programming/python/data-structures-and-algorithms/linear-search.html
+++ b/programming/python/data-structures-and-algorithms/linear-search.html
@@ -16,6 +16,11 @@ permalink: /programming/python/data-structures-and-algorithms/linear-search/
     <h2>Linear Search Implementation</h2>
     <p>Due to its simplicity, a Linear Search is very easy to implement. We only need to <i>iterate</i>, or loop, over a list of elements and check if any of them are the same as the element we are looking for. Below is the implementation of a Linear Search:</p>
     <pre><code class="language-python">
-        
+
     </code></pre>
+</section>
+
+<section>
+    <h2>Code Breakdown</h2>
+    <p></p>
 </section>
