--- a/tutorial-index.html
+++ b/tutorial-index.html
@@ -55,6 +55,7 @@ layout: default
     <li><a href="/physics/">Physics</a>
         <ul>
             <li><a href="/physics/astronomy/">Astronomy</a></li>
+            <li><a href="/physics/electrical-engineering/">Electrical Engineering</a></li>
         </ul>
     </li>
 </ul>
