--- a/physics/electrical-engineering/index.html
+++ b/physics/electrical-engineering/index.html
@@ -4,3 +4,8 @@ permalink: /physics/electrical-engineering/
 layout: electrical-engineering
 ---
 <h1>Introduction to Electrical Engineering</h1>
+
+<section>
+    <h2>What is Electrical Engineering?</h2>
+    <p>Electrical engineering deals with electricity, electronics, and electromagnetism. As you'd imagine, electrical engineering is incredibly important.</p>
+</section>
