--- a/programming/python/data-structures-and-algorithms/linear-search.html
+++ b/programming/python/data-structures-and-algorithms/linear-search.html
@@ -26,6 +26,11 @@ def linear_search(arr, x):
 </section>
 
 <section>
+    <h2>Running the Code</h2>
+    <p>The code is written in a simple function.</p>
+</section>
+
+<section>
     <h2>Code Breakdown</h2>
     <p></p>
 </section>
