--- a/physics/electrical-engineering/index.html
+++ b/physics/electrical-engineering/index.html
@@ -7,5 +7,6 @@ layout: electrical-engineering
 
 <section>
     <h2>What is Electrical Engineering?</h2>
-    <p>Electrical engineering deals with electricity, electronics, and electromagnetism. As you'd imagine, electrical engineering is incredibly important.</p>
+    <p>Electrical engineering deals with electricity, electronics, and electromagnetism. As you'd imagine, electrical engineering is incredibly important to all aspects of our lives.</p>
+    <img src="/images/physics/electrical-engineering/electrical-engineering.png">
 </section>
