--- a/physics/electrical-engineering/electricity.html
+++ b/physics/electrical-engineering/electricity.html
@@ -7,5 +7,16 @@ layout: electrical-engineering
 
 <section>
     <h2>What is Electricity?</h2>
-    <p>Electricity is one of the most fundamental concepts in electrical engineering.</p>
+    <p><em>Electricity</em> simply means something with <em>electric charge</em> is flowing. The most common form of electricity is in the form of <em>electrons</em> flowing.</p>
+    <p>Electricity is perhaps the most important concept in all of electrical engineering.</p>
+</section>
+
+<section>
+    <h2>What is Charge?</h2>
+    <p></p>
+</section>
+
+<section>
+    <h2>What is an Electron?</h2>
+    <p></p>
 </section>
