add quick clarification

--- a/physics/electrical-engineering/electricity.html
+++ b/physics/electrical-engineering/electricity.html
@@ -8,6 +8,7 @@ layout: electrical-engineering
 <section>
     <h2>What is Electricity?</h2>
     <p><em>Electricity</em> simply means something with <em>electric charge</em> is flowing. The most common form of electricity is in the form of <em>electrons</em> flowing.</p>
+    <p>The word "electricity" is not the same as "electrical energy", but we often use these terms interchangeably. Electricity is the <em>medium</em> in which electrical energy travels.</p>
     <p>Electricity is perhaps the most important concept in all of electrical engineering.</p>
 </section>
 
