fill in charge section

--- a/physics/electrical-engineering/electricity.html
+++ b/physics/electrical-engineering/electricity.html
@@ -13,8 +13,8 @@ layout: electrical-engineering
 </section>
 
 <section>
-    <h2>What is Charge?</h2>
-    <p></p>
+    <h2>What is Electrical Charge?</h2>
+    <p>Electrical charge is an intrisic property of matter. Charge can be smaller or large and can be negative or positive. Things with negative charge attract things with positive charge, and vice versa. Things with the same charge (positive and positive, negative and negative) repel. The attraction and the repulsion are proportional to the amount of charge.</p>
 </section>
 
 <section>
