--- a/physics/electrical-engineering/electricity.html
+++ b/physics/electrical-engineering/electricity.html
@@ -19,5 +19,5 @@ layout: electrical-engineering
 
 <section>
     <h2>What is an Electron?</h2>
-    <p></p>
+    <p>An <em>electron</em> is a <em>subatomic particle</em>, which means that it is smaller than an atom (which is incredibly, incredibly small). In fact, electrons make up atoms. The charge of an electron is negative. Electrons move at almost the speed of light, which is 299,792,458 meters per second. In fact, the speed of light is the fastest speed possible in the universe.</p>
 </section>
