inside the atom section

--- a/physics/electrical-engineering/conductors-insulators.html
+++ b/physics/electrical-engineering/conductors-insulators.html
@@ -6,8 +6,9 @@ layout: electrical-engineering
 <h1>Conductors and Insulators</h1>
 
 <section>
-    <h2>A Look Inside the Atom</h2>
-    <p></p>
+    <h2>Inside the Atom</h2>
+    <p>Atoms are made up of two parts: the electrons and the nucleus. The nucleus is an tiny and incredibly compact object in the center of the atom. The nucleus is made up of protons and neutrons.</p>
+    <p>The electrons are in the outer region of the atom.</p>
 </section>
 
 <section>
