--- a/physics/electrical-engineering/conductors-insulators.html
+++ b/physics/electrical-engineering/conductors-insulators.html
@@ -13,10 +13,10 @@ layout: electrical-engineering
 
 <section>
     <h2>What is a Conductor?</h2>
-    <p></p>
+    <p>A <em>conductor</em> is a material that electricity can pass through. Most metals are conductive. We use conductors to make wires.</p>
 </section>
 
 <section>
     <h2>What is an Insulator?</h2>
-    <p></p>
+    <p>An <em>insulator</em> is a material that electricity can't pass through. This includes rubber and ceramic. We use insulators to cover the conductor when making wires so that people aren't injured by the electricity. Electricity can be dangerous!</p>
 </section>
