--- a/programming/python/data-structures-and-algorithms/linear-search.html
+++ b/programming/python/data-structures-and-algorithms/linear-search.html
@@ -27,7 +27,7 @@ def linear_search(arr, x):
 
 <section>
     <h2>Running the Code</h2>
-    <p>The code is written in a simple function.</p>
+    <p>The code is written in a simple function. It performs a Linear Search on the array, <var>arr</var>, and finds the first occurence of the value of <var>x</var>. If the element is not found, the program returns <code>-1</code>. Otherwise, it returns the index where <var>x</var> is found.</p>
 </section>
 
 <section>
