--- a/math/shape-space/index.html
+++ b/math/shape-space/index.html
@@ -1,7 +1,7 @@
 ---
-title: Shape and Space
+title: Introduction to Shape and Space
 permalink: /math/shape-space/
 layout: shape-space
 ---
 
-<h1>Shape and Space</h1>
+<h1>Introduction to Shape and Space</h1>
