--- a/math/index.html
+++ b/math/index.html
@@ -8,6 +8,7 @@ layout: default
     <p>Below is a list of math subjects we cover on Learnmonkey: </p>
     <ul>
         <li><a href="/math/algebra/">Algebra</a></li>
+        <li><a href="/math/shape-space/">Shape and Space</a></li>
     </ul>
     <img src="/images/math/math.jpg" alt="Math">
 </section>
