fill section + add

--- a/math/shape-space/transformations.html
+++ b/math/shape-space/transformations.html
@@ -5,3 +5,13 @@ layout: shape-space
 ---
 
 <h1>Transformations</h1>
+
+<section>
+    <h2>What are Transformations?</h2>
+    <p>Transformation is very important in Shape and Space. It involves moving different shapes, both 2D and 3D, in different ways. In this tutorial, we'll learn about them.</p>
+</section>
+
+<section>
+    <h2>Different Transformations</h2>
+    <p></p>
+</section>
