update tutorial index

--- a/tutorial-index.html
+++ b/tutorial-index.html
@@ -43,7 +43,7 @@ layout: default
         <ul>
             <!--<li><a href="/math/arithmetic/">Arithmetic</a></li>-->
             <li><a href="/math/algebra/">Algebra</a></li>
-            <li><a href="/math/shape-space/">Shape and Space</a></li>
+            <li><a href="/math/geometry/">Geometry</a></li>
             <!--<li><a href="/math/geometry/">Geometry</a>
                 <ul>
                     <li><a href="/math/geometry/trigonometry/">Trigonometry</a></li>
