what is geometry section

--- a/math/geometry/index.html
+++ b/math/geometry/index.html
@@ -7,7 +7,7 @@ layout: geometry
 
 <section>
     <h2>What is Geometry?</h2>
-    <p></p>
+    <p>Geometry is the study of space, which includes things like shape, size, and distance. Geometry is one the oldest branches of math.</p>
 </section>
 
 <section>
