why learn geometry section

--- a/math/geometry/index.html
+++ b/math/geometry/index.html
@@ -12,5 +12,5 @@ layout: geometry
 
 <section>
     <h2>Why Learn Geometry?</h2>
-    <p></p>
+    <p>An understanding of geometry is quite useful in real life. This is also why geometry can be found in many curriculums around the world.</p>
 </section>
