--- a/physics/electrical-engineering/circuits.html
+++ b/physics/electrical-engineering/circuits.html
@@ -7,7 +7,7 @@ layout: electrical-engineering
 
 <section>
     <h2>What are Circuits?</h2>
-    <p></p>
+    <p>A <em>circuit</em> is a loop that electrons can travel through. If we don't make it a loop, the electrons can't travel. Circuits include a source of electricity, like a battery. Circuits also generally include a load, which is something that takes up electricity, like a light bulb.</p>
 </section>
 
 <section>
