--- a/physics/electrical-engineering/circuits.html
+++ b/physics/electrical-engineering/circuits.html
@@ -7,10 +7,12 @@ layout: electrical-engineering
 
 <section>
     <h2>What are Circuits?</h2>
-    <p>A <em>circuit</em> is a loop that electrons can travel through. If we don't make it a loop, the electrons can't travel. Circuits include a source of electricity, like a battery. Circuits also generally include a load, which is something that takes up electricity, like a light bulb.</p>
+    <p>A <em>circuit</em> is a loop that electrons can travel through. If we don't make it a loop, the electrons can't travel. Circuits include a source of electricity, like a battery. Circuits also generally include a load, which is something that uses up electricity, like a light bulb.</p>
 </section>
 
 <section>
     <h2>Examples of Circuits</h2>
-    <p></p>
+    <p>Below is an example of a circuit. It has a source of electricity (battery) and a load (light bulb): </p>
+    <p>We can also add a switch to the circuit: </p>
+    <p>We can even have two light bulbs: </p>
 </section>
