--- a/physics/electrical-engineering/conductors-insulators.html
+++ b/physics/electrical-engineering/conductors-insulators.html
@@ -7,7 +7,7 @@ layout: electrical-engineering
 
 <section>
     <h2>Inside the Atom</h2>
-    <p>Atoms are made up of two parts: the electrons and the nucleus. The nucleus is an tiny and incredibly compact object in the center of the atom. The nucleus is made up of protons and neutrons.</p>
+    <p>Atoms are made up of two parts: the electrons and the nucleus. The nucleus is an tiny and incredibly compact object in the center of the atom. The nucleus is made up of <em>protons</em> and <em>neutrons</em>. A proton has the charge of an electron, but positive. A neutron has a charge of zero.</p>
     <p>The electrons are in the outer region of the atom.</p>
 </section>
 
