--- a/physics/electrical-engineering/circuits.html
+++ b/physics/electrical-engineering/circuits.html
@@ -8,6 +8,7 @@ layout: electrical-engineering
 <section>
     <h2>What are Circuits?</h2>
     <p>A <em>circuit</em> is a loop that electrons can travel through. If we don't make it a loop, the electrons can't travel. Circuits include a source of electricity, like a battery. Circuits also generally include a load, which is something that uses up electricity, like a light bulb.</p>
+    <p>The components of circuits are called <em>electric components</em>.</p>
     <p>We can also have a switch. A switch blocks the flow of the electrons. If the electrons are blocked, we call the circuit an <em>open circuit</em>. If the electrons are flowing, we call the circuit a <em>closed circuit</em>.</p>
 </section>
 
