--- a/programming/python/data-structures-and-algorithms/linear-search.html
+++ b/programming/python/data-structures-and-algorithms/linear-search.html
@@ -32,5 +32,5 @@ def linear_search(arr, x):
 
 <section>
     <h2>Code Breakdown</h2>
-    <p>The code for a Linear Search is very simple. On the first line, we define a function with <pre><code class="language-python">def linear_search(arr, x):</code> On the next line, we have a multi-line string. When you put a multi-line string on the line right after declaring a function, we call it a <i>doc-string</i>, which tells the developer a little bit about the function. </pre></p>
+    <p>The code for a Linear Search is very simple. On the first line, we define a function with <pre><code class="language-python">def linear_search(arr, x):</code></pre> On the next line, we have a multi-line string. When you put a multi-line string on the line right after declaring a function, we call it a <i>doc-string</i>, which tells the developer a little bit about the function.</p>
 </section>
