--- a/programming/python/data-structures-and-algorithms/linear-search.html
+++ b/programming/python/data-structures-and-algorithms/linear-search.html
@@ -33,5 +33,10 @@ def linear_search(arr, x):
 <section>
     <h2>Code Breakdown</h2>
     <p>The code for a Linear Search is very simple. On the first line, we define a function with <pre><code class="language-python">def linear_search(arr, x):</code></pre> On the next line, we have a multi-line string. When you put a multi-line string on the line right after declaring a function, we call it a <i>doc-string</i>, which tells the developer a little bit about the function. Then, we have our main code:</p>
-    <pre><code class="language-python"></code></pre>
+    <pre><code class="language-python">
+for index in range(len(arr)):
+    if arr[index] == x:
+        return index
+    </code></pre>
+    <p>In the code, we <i>loop</i> (or <i>iterate</i>) over the arry/list. For each item, we check if the element is equal to our target. If it is, then we'll return the index where we find it. WHen we return something in Python, we automaticaly break</p>
 </section>
