--- a/programming/python/data-structures-and-algorithms/linear-search.html
+++ b/programming/python/data-structures-and-algorithms/linear-search.html
@@ -38,5 +38,5 @@ for index in range(len(arr)):
     if arr[index] == x:
         return index
     </code></pre>
-    <p>In the code, we <i>loop</i> (or <i>iterate</i>) over the arry/list. For each item, we check if the element is equal to our target. If it is, then we'll return the index where we find it. WHen we return something in Python, we automaticaly break</p>
+    <p>In the code, we <i>loop</i> (or <i>iterate</i>) over the arry/list. For each item, we check if the element is equal to our target. If it is, then we'll return the index where we find it. WHen we return something in Python, we automatically break</p>
 </section>
