--- a/programming/python/data-structures-and-algorithms/linear-search.html
+++ b/programming/python/data-structures-and-algorithms/linear-search.html
@@ -39,5 +39,5 @@ for index in range(len(arr)):
         return index
     </code></pre>
     <p>In the code, we <i>loop</i> (or <i>iterate</i>) over the arry/list. For each item, we check if the element is equal to our target. If it is, then we'll return the index where we find it. WHen we return something in Python, we automatically break out of the function, so our function will return the first occurence of the target, if it finds it.</p>
-    <p>FInally, on the last line, </p>
+    <p>Finally, on the last line, </p>
 </section>
