--- a/physics/electrical-engineering/conductors-insulators.html
+++ b/physics/electrical-engineering/conductors-insulators.html
@@ -13,7 +13,7 @@ layout: electrical-engineering
 
 <section>
     <h2>What is a Conductor?</h2>
-    <p>A <em>conductor</em> is a material that electricity can pass through. Most metals are conductive. We use conductors to make wires.</p>
+    <p>A <em>conductor</em> is a material that electricity can pass through. Most metals are conductive. We use conductors to make wires. Some materials are more conductive than others.</p>
 </section>
 
 <section>
