--- a/programming/python/data-structures-and-algorithms/data-structures.html
+++ b/programming/python/data-structures-and-algorithms/data-structures.html
@@ -5,3 +5,23 @@ permalink: /programming/python/data-structures-and-algorithms/data-structures/
 ---
 
 <h1>Data Structures</h1>
+
+<section>
+    <h2>What are Stacks?</h2>
+    <p></p>
+</section>
+
+<section>
+    <h2>Stacks in Real Life</h2>
+    <p></p>
+</section>
+
+<section>
+    <h2>Stack Implementation</h2>
+    <p></p>
+</section>
+
+<section>
+    <h2>Stacks in Contests</h2>
+    <p></p>
+</section>
