add another example

--- a/physics/electrical-engineering/circuits.html
+++ b/physics/electrical-engineering/circuits.html
@@ -17,4 +17,5 @@ layout: electrical-engineering
     <p>Below is an example of a circuit. It has a source of electricity (battery) and a load (light bulb): </p>
     <p>We can also add a switch to the circuit: </p>
     <p>We can even have two light bulbs: </p>
+    <p>The following circuit uses two batteries and two loads, a toaster and a light bulb: </p>
 </section>
