--- a/programming/python/data-structures-and-algorithms/stacks.html
+++ b/programming/python/data-structures-and-algorithms/stacks.html
@@ -5,4 +5,25 @@ permalink: /programming/python/data-structures-and-algorithms/stacks/
 ---
 
 <h1>Stacks</h1>
-<p></p>
+<p>In this tutorial, we'll learn about Stacks.</p>
+
+
+<section>
+    <h2>What are Stacks?</h2>
+    <p></p>
+</section>
+
+<section>
+    <h2>Stacks in Real Life</h2>
+    <p></p>
+</section>
+
+<section>
+    <h2>Stack Implementation</h2>
+    <p></p>
+</section>
+
+<section>
+    <h2>Stacks in Contests</h2>
+    <p></p>
+</section>
