--- a/programming/python/data-structures-and-algorithms/stacks.html
+++ b/programming/python/data-structures-and-algorithms/stacks.html
@@ -10,7 +10,8 @@ permalink: /programming/python/data-structures-and-algorithms/stacks/
 
 <section>
     <h2>What are Stacks?</h2>
-    <p></p>
+    <p>Stacks are a simple but useful Data Structure. They're very useful in Programming Competitions.</p>
+    <p>Basically, Stakcs are</p>
 </section>
 
 <section>
