--- a/programming/python/data-structures-and-algorithms/stacks.html
+++ b/programming/python/data-structures-and-algorithms/stacks.html
@@ -11,12 +11,7 @@ permalink: /programming/python/data-structures-and-algorithms/stacks/
 <section>
     <h2>What are Stacks?</h2>
     <p>Stacks are a simple but useful Data Structure. They're very useful in Programming Competitions.</p>
-    <p>Basically, Stacks are</p>
-</section>
-
-<section>
-    <h2>Stacks in Real Life</h2>
-    <p></p>
+    <p>Basically, Stacks are like actual stacks. Imagine that you have some books stacked on top of each other.</p>
 </section>
 
 <section>
