--- a/programming/python/data-structures-and-algorithms/stacks.html
+++ b/programming/python/data-structures-and-algorithms/stacks.html
@@ -12,6 +12,7 @@ permalink: /programming/python/data-structures-and-algorithms/stacks/
     <h2>What are Stacks?</h2>
     <p>Stacks are a simple but useful Data Structure. They're very useful in Programming Competitions.</p>
     <p>Basically, Stacks are like actual stacks. Imagine that you have some books stacked on top of each other.</p>
+    <img src="/images/programming/python/ds-algs/stack-of-books.png" alt="Stack of Books">
 </section>
 
 <section>
