--- a/physics/electrical-engineering/current.html
+++ b/physics/electrical-engineering/current.html
@@ -5,5 +5,5 @@ layout: electrical-engineering
 ---
 <h1>Current</h1>
 
-<p>In electrical engineering, current is how much electricity is flowing past a point in a circuit.</p>
+<p>In electrical engineering, <em>current</em> is how much electricity is flowing past a point in a circuit.</p>
 <p>The SI unit for measuring current is the <em>ampere</em> (also called an <em>amp</em>). We measure current using an <em>ammeter</em>.</p>
