--- a/programming/python/data-structures-and-algorithms/stacks.html
+++ b/programming/python/data-structures-and-algorithms/stacks.html
@@ -11,8 +11,8 @@ permalink: /programming/python/data-structures-and-algorithms/stacks/
 <section>
     <h2>What are Stacks?</h2>
     <p>Stacks are a simple but useful Data Structure. They're very useful in Programming Competitions.</p>
-    <p>Basically, Stacks are like actual stacks. Imagine that you have some books stacked on top of each other.</p>
-    <img src="/images/programming/python/ds-algs/stack-of-books.png" alt="Stack of Books">
+    <p>Basically, Stacks are like actual stacks. Imagine that you have some pancakes stacked on top of each other.</p>
+    <div class="pancake" style="height: 150px; width: 250px; border-radius: 40%;">3</div>
 </section>
 
 <section>
