--- a/physics/electrical-engineering/electricity.html
+++ b/physics/electrical-engineering/electricity.html
@@ -15,6 +15,7 @@ layout: electrical-engineering
 <section>
     <h2>What is Electrical Charge?</h2>
     <p>Electrical charge is an intrisic property of matter. Charge can be smaller or large and can be negative or positive. Things with negative charge attract things with positive charge, and vice versa. Things with the same charge (positive and positive, negative and negative) repel. The attraction and the repulsion are proportional to the amount of charge.</p>
+    <p>We measure charge in the unit of the <em>coulomb</em>. Because electrical engineering usually deals with electrons, electrical engineers often use coulumbs as a way to talk about the amount of electrons.</p>
 </section>
 
 <section>
