--- a/physics/electrical-engineering/current.html
+++ b/physics/electrical-engineering/current.html
@@ -6,4 +6,4 @@ layout: electrical-engineering
 <h1>Current</h1>
 
 <p>In electrical engineering, <em>current</em> is the rate of electricity that is flowing past a point in a circuit.</p>
-<p>The SI unit for measuring current is the <em>ampere</em> (also called an <em>amp</em>). We measure current using an <em>ammeter</em>.</p>
+<p>The SI unit for measuring current is the <em>ampere</em> (also called an <em>amp</em>). An ampere is defined as one coulomb per second. We measure current using an <em>ammeter</em>.</p>
