--- a/programming/python/data-structures-and-algorithms/stacks.html
+++ b/programming/python/data-structures-and-algorithms/stacks.html
@@ -12,7 +12,7 @@ permalink: /programming/python/data-structures-and-algorithms/stacks/
     <h2>What are Stacks?</h2>
     <p>Stacks are a simple but useful Data Structure. They're very useful in Programming Competitions.</p>
     <p>Basically, Stacks are like actual stacks. Imagine that you have some pancakes stacked on top of each other.</p>
-    <div class="pancake" style="height: 150px; width: 250px; border-radius: 40%;">3</div>
+    <div class="pancake" style="height: 150px; width: 250px; border-radius: 40%; border: 2px solid black;">3</div>
 </section>
 
 <section>
