--- a/physics/electrical-engineering/current.html
+++ b/physics/electrical-engineering/current.html
@@ -5,5 +5,6 @@ layout: electrical-engineering
 ---
 <h1>Current</h1>
 
-<p>In electrical engineering, <em>current</em> is the rate of electricity that is flowing past a point in a circuit.</p>
+<p>In electrical engineering, <em>current</em> is the rate of electricity (usually electrons) that is flowing past a point in a circuit.</p>
+<p>If you think of the electricity as water flow, current is how much water is flowing through a point in the pipe every second.</p>
 <p>The SI unit for measuring current is the <em>ampere</em> (also called an <em>amp</em>). An ampere is defined as one coulomb per second. We measure current using an <em>ammeter</em>.</p>
