--- a/programming/python/data-structures-and-algorithms/stacks.html
+++ b/programming/python/data-structures-and-algorithms/stacks.html
@@ -12,7 +12,7 @@ permalink: /programming/python/data-structures-and-algorithms/stacks/
     <h2>What are Stacks?</h2>
     <p>Stacks are a simple but useful Data Structure. They're used in Programming Competitions and Job Interviews, so it is a good idea to learn about them.</p>
     <p>Basically, Stacks are like actual stacks. Imagine that you have some pancakes stacked on top of each other.</p>
-    <div style="height: 150px; width: 250px; border-radius: 40%; border: 2px solid black;">3</div>
+    <div style="height: 150px; width: 250px; border-radius: 40%; border: 2px solid black; text-align: center; display: flex; flex-direction: column; justify-content: center;">3</div>
     <p>WIth these pancakes, you can either put some more pancakes on top of the stack, or remove the pancake on top of the stack. It's the same with Stacks in Programming. It's "First In, Last Out", meaning that6 the first elements you add to the Stack will get removed last.</p>
 </section>
 
